syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "NevaSms";

package account;

// Сервис для работы с аккаунтами
service Account {
  // Авторизация
  rpc Login (LoginRequest) returns (LoginResponse);
  // Обновление токена
  rpc RefreshToken (google.protobuf.Empty) returns (LoginResponse);
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refreshToken = 2;
}